[package]
name = "treehouse"
version = "0.1.0"
edition = "2021"

[dependencies]

treehouse-format = { workspace = true }

anyhow = "1.0.75"
axum = "0.7.4"
clap = { version = "4.3.22", features = ["derive"] }
codespan-reporting = "0.11.1"
copy_dir = "0.1.3"
env_logger = "0.10.0"
handlebars = "4.3.7"
http-body = "1.0.0"
image = "0.24.8"
log = { workspace = true }
pulldown-cmark = { version = "0.9.3", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
toml_edit = { version = "0.19.14", features = ["serde"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = "0.9.2"
walkdir = "2.3.3"
ulid = "1.0.0"
